# ocdkit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test_and_deploy.yml
docs/: plot-backend-roadmap.md  plugin-authoring.md  pywebview-desktop-integration.md
scripts/: bench_colorize.py  bench_contour_alignment.py  bench_hdr_cmap.py  bench_vector_contours.py  bench_vector_contours_tier2.py  check_compare_pixels.py  check_hdr_cmap.py  check_jxl_p3_bytes.py  check_playwright_render.py  check_uhdr_sdr_base.py  coverage_cross_device.env.example  coverage_cross_device.sh
src/ocdkit/: __init__.py  __main__.py  array.py  gpu.py  imports.py  io.py  measure.py  morphology.py  registration.py  slice.py  spatial.py  tls.py
src/ocdkit/array/: __init__.py  convert.py  filters.py  imports.py  index.py  morphology.py  normalize.py  ops.py  parallel.py  spatial.py  transform.py  union_find.py  warp.py
src/ocdkit/cli/: __init__.py  __main__.py  main.py  migrate.py  paths.py
src/ocdkit/desktop/: __init__.py  pinning.py
src/ocdkit/io/: __init__.py  figure.py  figure_server.py  files.py  image.py  imports.py  path.py  result.py
src/ocdkit/load/: __init__.py  module.py  object.py
src/ocdkit/logging/: handler.py
src/ocdkit/measure/: __init__.py  bbox.py  diameter.py  imports.py  medoid.py  metrics.py
src/ocdkit/plot/: __init__.py  bench.py  color.py  composite.py  composite_grid.py  contour.py  defaults.py  display.py  export.py  figure.py  grid.py  hdr_cmap.py  image_grid.py  imports.py  label.py  layout.py  ncolor.py  style.py  svg.py  text_metrics.py
src/ocdkit/testing/: __init__.py  collisions.py  imports.py
src/ocdkit/tls/: __init__.py  external_ca.py  hostnames.py  imports.py  local_ca.py  paths.py  trust.py
src/ocdkit/utils/: collections.py  gpu.py  kwargs.py  paths.py
src/ocdkit/viewer/: __init__.py  __main__.py  app.py  assets.py  cli.py  demo.html  dependencies.py  exceptions.py  masks.py  middleware.py  model_registry.py  routes.py  sample_image.py  schemas.py  segmentation.py  session.py  system.py
src/ocdkit/viewer/plugins/: __init__.py  base.py  registry.py  schema.py  threshold.py
src/ocdkit/viewer/routers/: __init__.py  index.py  log.py  mask.py  plugin.py  segment.py  session_routes.py  system.py  trust.py
src/ocdkit/viewer/web/: app.js  index.html
src/ocdkit/viewer/web/css/: controls.css  layout.css  tools.css
src/ocdkit/viewer/web/html/: sidebar.html
src/ocdkit/viewer/web/js/: brush.js  colormap.js  debug-apple-material.js  file-navigation.js  history.js  interactions.js  logging.js  mask-pipeline.js  painting.js  plugin-panel.js  pointer-state.js  state-persistence.js  tooltip-editor.js  ui-utils.js
tests/: test_array.py  test_gpu.py  test_import_cycles.py  test_io.py  test_measure.py  test_module_collisions.py  test_module_discovery.py  test_morphology.py  test_paths_migration.py  test_plot_color.py  test_plot_contour.py  test_plot_display.py  test_plot_export.py  test_plot_figure.py  test_plot_grid.py  test_plot_label.py  test_plot_notebook.py  test_registration.py  test_slice.py  test_spatial.py
tests/e2e/: conftest.py  test_browser_smoke.py  test_pywebview_snapshot.py
tests/fixtures/: multichan_3c_4x4.czi  tiny_8x8.czi
tests/viewer/: test_active_plugin_cache.py  test_app.py  test_async_dispatch.py  test_envelope_and_middleware.py  test_plugin_contract.py  test_session_eviction.py  test_title_config.py  test_ui_mode.py
