[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ocdkit"
dynamic = ["version"]
description = "Obsessive Coder's Dependency Toolkit — Python utilities for array manipulation, GPU dispatch, image I/O, morphology, and plotting."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "tifffile",
    "imagecodecs",
    "matplotlib",
    "fastremap",
    "edt",
    "torch>=1.12",
    "dask[array]",
    "natsort",
    "numba",
    "bioio",
    "bioio-czi",
    "ncolor>=1.5.1",
    "cmap",
    "tqdm",
    "platformdirs",
]

[project.optional-dependencies]
viewer = [
    "fastapi",
    "uvicorn[standard]",
    "imageio",
]
desktop = [
    "pywebview",
    "pywin32; sys_platform == 'win32'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.scripts]
ocdkit = "ocdkit.cli.main:main"
ocdkit-viewer = "ocdkit.viewer.cli:main"

[project.gui-scripts]
ocdkit-viewer-gui = "ocdkit.viewer.cli:main"

[project.entry-points."ocdkit.plugins"]
# Built-in reference plugin — also always-registered at runtime for MVP.
# Third-party plugins declare their own entries:
#   [project.entry-points."ocdkit.plugins"]
#   my_tool = "my_tool.ocdkit_plugin:plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ocdkit.viewer" = [
    "*.html",
    "web/*.html",
    "web/*.js",
    "web/css/*.css",
    "web/html/*.html",
    "web/js/*.js",
    "web/js/*.c",
    "web/icons/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ocdkit"]

[tool.coverage.paths]
source = [
    "src/ocdkit",
    "/Volumes/DataDrive/ocdkit/src/ocdkit",
    "/home/kcutler/DataDrive/ocdkit/src/ocdkit",
]

[tool.coverage.report]
show_missing = true

[tool.setuptools_scm]
