[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ocdkit"
dynamic = ["version"]
description = "Obsessive Coder's Dependency Toolkit — Python utilities for array manipulation, GPU dispatch, image I/O, morphology, and plotting."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
dependencies = [
    # numpy >= 2.0 — np.unique was reworked / sped up in the 2.0 cycle
    # and matches fastremap.unique on label arrays. Helpers like
    # array.ops.unique_nonzero / is_sequential rely on that parity to
    # avoid hard-importing fastremap.
    "numpy>=2.0",
    "scipy",
    "scikit-image>=0.26",
    "tifffile",
    "imagecodecs",
    "matplotlib",
    "fastremap",
    "edt",
    "torch>=1.12",
    "dask[array]",
    "natsort",
    "numba",
    "aicspylibczi",
    "ncolor>=1.5.1",
    "cmap",
    "tqdm",
    "platformdirs",
    "cryptography",
]

[project.optional-dependencies]
viewer = [
    "fastapi",
    "uvicorn[standard]",
    "imageio",
    "python-multipart",  # required for /api/upload_image (browser-side image picker)
]
desktop = [
    "pywebview",
    "pywin32; sys_platform == 'win32'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.scripts]
ocdkit = "ocdkit.cli.main:main"
ocdkit-viewer = "ocdkit.viewer.cli:main"

[project.gui-scripts]
ocdkit-viewer-gui = "ocdkit.viewer.cli:main"

[project.entry-points."ocdkit.plugins"]
# Built-in reference plugin — also always-registered at runtime for MVP.
# Third-party plugins declare their own entries:
#   [project.entry-points."ocdkit.plugins"]
#   my_tool = "my_tool.ocdkit_plugin:plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ocdkit.viewer" = [
    "*.html",
    "web/*.html",
    "web/*.js",
    "web/css/*.css",
    "web/html/*.html",
    "web/js/*.js",
    "web/js/*.c",
    "web/icons/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ocdkit"]

[tool.coverage.paths]
source = [
    "src/ocdkit",
    "/Volumes/DataDrive/ocdkit/src/ocdkit",
    "/home/kcutler/DataDrive/ocdkit/src/ocdkit",
]

[tool.coverage.report]
show_missing = true

[tool.setuptools_scm]
